--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,14 +117,14 @@
                 android:textSize="20sp" />
         </LinearLayout>
 
-        <TableLayout
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:stretchColumns="*"
-            android:id="@+id/tbLayout">
+            android:id="@+id/linLayout"
+            android:orientation="vertical">
 
-        </TableLayout>
+        </LinearLayout>
 
         <GridView
             android:layout_width="wrap_content"
